--- a/Madatyan_sales/Madatyan_sales/App.xaml
+++ b/Madatyan_sales/Madatyan_sales/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="sales_Artak.App"
+﻿<Application x:Class="sales_Madatyan.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:sales_Artak"
+             xmlns:local="clr-namespace:sales_Madatyan"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
